@@ -41,7 +41,7 @@ choice
 		depends on !BR2_avr32
 
 	config BR2_GDB_VERSION_7_4
-		config BR2_GDB_VERSION_7_4
+		bool "gdb 7.4"
 		depends on !BR2_bfin
 
 endchoice
